# translate-api

./: .gitignore  Dockerfile  README.md  dev.env  pyproject.toml
app/: main.py
app/api/: probes.py  v1.py
app/core/: config.py  crud.py  logging_middleware.py  schemas.py
app/db/: mongo.py
tests/: not_test_server.py  test_data.json  test_data_list.json  test_db.py  test_translate.py
